--- a/GPT/GPT.csproj
+++ b/GPT/GPT.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenAI" Version="1.7.2" />
+  </ItemGroup>
+
 </Project>
