--- a/GPT/appsettings.json
+++ b/GPT/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiKey": "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"
 }
